--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,11 @@
 flask==2.3.3
 flask-socketio==5.3.6
+flask-session==0.4.0
 requests==2.31.0
 python-engineio==4.8.0
 python-socketio==5.10.0
 eventlet==0.33.3
 werkzeug==2.3.7
 spotipy==2.24.0
+redis==5.0.1
+python-dotenv==1.0.0
